--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>My first test again</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi obcaecati praesentium eius fuga sunt sint officia qui corrupti earum corporis adipisci dicta, provident dolorum veniam laborum pariatur? Nobis, iste dignissimos?</p>
     <h3>Again test branch1 for push</h3>
+    <button>Click to cancel</button>
 </body>
 </html>
