--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<html>
-    <head>
-      <title>Another Website</title>
-      <link rel="shortcut icon" href="image/download.jpg" type="image/x-icon">
-      <meta >
-    </head>
-    <body>
-      <h1>I can create another website</h1>   
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My first website for practices</title>
+</head>
+<body>
+  <div>
+    <h1>This New Practices will help me to attempt my destination</h1>
+    <title>Created by Abdulla Al Mamun</title>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, error. Voluptatibus eius voluptates deleniti, qui accusantium eveniet maxime ex rerum quidem, magnam vel enim veritatis perferendis porro totam consectetur molestiae?</p>
+
+  </div>
+</body>
 </html>
