add css file and some html properties

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My first website for practices</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div>
-    <h1>This New Practices will help me to attempt my destination</h1>
-    <title>Created by Abdulla Al Mamun</title>
+    <h1 class="head-title">This New Practices will help me to attempt my destination</h1>
+    <title>Created by <span class="name-span">Abdulla Al Mamun</span></title>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, error. Voluptatibus eius voluptates deleniti, qui accusantium eveniet maxime ex rerum quidem, magnam vel enim veritatis perferendis porro totam consectetur molestiae?</p>
 
   </div>
